fix close button in dark mode

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -34,6 +34,9 @@
   --bs-btn-active-border-color: transparent;
   --bs-btn-hover-border-color: transparent;
 }
+[data-theme="dark"] .btn-close {
+  filter: invert();
+}
 
 /* prettier-ignore */
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
